# shork

./: .gitignore  CMakeLists.txt  README.md  args.c  args.h  console.c  console.h  io.c  io.h  main.c  model_loader.c  model_loader.h  renderer.c  renderer.h
AssetGenerator/: genassets.py  util.py
AssetGenerator/Converter/: OBJConverter.py
AssetGenerator/shork/: blahaj.mtl  blahaj_uvn.mtl
assets/: fragment.glsl  shork_credit.txt  vertex.glsl
model_generator/: convert_model.py
platform/: platform.h
platform/console/: ansi.h  egl.c  egl.h  platform_console.c  platform_console.h  tty.c  tty.h
platform/sdl/: platform_sdl.c  platform_sdl.h
